--- a/src/views/partials/src.ejs
+++ b/src/views/partials/src.ejs
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href='/css/index.css'>
-<link rel="stylesheet" href="/css/footer.css">
-<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href='/CSS/index.css'>
+<link rel="stylesheet" href="/CSS/footer.css">
+<link rel="stylesheet" href="/CSS/main.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap" rel="stylesheet">
